// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`footnoteDisplay renders 0 1`] = `
Array [
  .c0 {
  footnote-display: 0;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: 0;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: 0;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`footnoteDisplay renders function 1`] = `
Array [
  .c0 {
  footnote-display: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: has;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: has;
}

<div
    className="c0"
  />,
]
`;

exports[`footnoteDisplay renders invalid theme path 1`] = `
Array [
  .c0 {
  footnote-display: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`footnoteDisplay renders negative number 1`] = `
Array [
  .c0 {
  footnote-display: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`footnoteDisplay renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  footnote-display: July;
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    footnote-display: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: July;
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    footnote-display: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    footnote-display: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    footnote-display: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`footnoteDisplay renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    footnote-display: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    footnote-display: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    footnote-display: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    footnote-display: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    footnote-display: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    footnote-display: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    footnote-display: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`footnoteDisplay renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  footnote-display: July;
}

@media May {
  .c0 {
    footnote-display: August;
  }
}

@media April {
  .c0 {
    footnote-display: September;
  }
}

@media January {
  .c0 {
    footnote-display: November;
  }
}

@media April {
  .c0 {
    footnote-display: August;
  }
}

@media June {
  .c0 {
    footnote-display: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: July;
}

@media May {
  .c0 {
    footnote-display: August;
  }
}

@media April {
  .c0 {
    footnote-display: September;
  }
}

@media January {
  .c0 {
    footnote-display: November;
  }
}

@media April {
  .c0 {
    footnote-display: August;
  }
}

@media June {
  .c0 {
    footnote-display: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    footnote-display: November;
  }
}

@media April {
  .c0 {
    footnote-display: January;
  }
}

@media January {
  .c0 {
    footnote-display: December;
  }
}

@media April {
  .c0 {
    footnote-display: April;
  }
}

@media June {
  .c0 {
    footnote-display: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    footnote-display: November;
  }
}

@media April {
  .c0 {
    footnote-display: January;
  }
}

@media January {
  .c0 {
    footnote-display: December;
  }
}

@media April {
  .c0 {
    footnote-display: April;
  }
}

@media June {
  .c0 {
    footnote-display: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`footnoteDisplay renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    footnote-display: July;
  }
}

@media April {
  .c0 {
    footnote-display: August;
  }
}

@media January {
  .c0 {
    footnote-display: September;
  }
}

@media April {
  .c0 {
    footnote-display: November;
  }
}

@media June {
  .c0 {
    footnote-display: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    footnote-display: July;
  }
}

@media April {
  .c0 {
    footnote-display: August;
  }
}

@media January {
  .c0 {
    footnote-display: September;
  }
}

@media April {
  .c0 {
    footnote-display: November;
  }
}

@media June {
  .c0 {
    footnote-display: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    footnote-display: January;
  }
}

@media April {
  .c0 {
    footnote-display: December;
  }
}

@media January {
  .c0 {
    footnote-display: April;
  }
}

@media April {
  .c0 {
    footnote-display: May;
  }
}

@media June {
  .c0 {
    footnote-display: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    footnote-display: January;
  }
}

@media April {
  .c0 {
    footnote-display: December;
  }
}

@media January {
  .c0 {
    footnote-display: April;
  }
}

@media April {
  .c0 {
    footnote-display: May;
  }
}

@media June {
  .c0 {
    footnote-display: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`footnoteDisplay renders postitive number 1`] = `
Array [
  .c0 {
  footnote-display: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`footnoteDisplay renders string 1`] = `
Array [
  .c0 {
  footnote-display: July;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: July;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: June;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: June;
}

<div
    className="c0"
  />,
]
`;

exports[`footnoteDisplay renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`footnoteDisplay renders valid theme path 1`] = `
Array [
  .c0 {
  footnote-display: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  footnote-display: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
